<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_anchor="@+id/linearLayout"
        app:layout_anchorGravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginHorizontal="25sp">
            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/default_user_img"/>
            <TextView
                android:id="@+id/user_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone_number_display"
                android:textSize="@dimen/_text_medium"
                android:layout_gravity="center"
                android:textAlignment="center"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/thank_text"
            android:textSize="@dimen/_text_big"
            android:layout_marginVertical="25sp"
            />



        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_padding"
            app:hintAnimationEnabled="true"
            android:maxLines="1"
            android:lines="1"
            android:hint="@string/enter_name_input_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/phone_number_edit_background"
                android:maxLines="1"
                android:lines="1"
                >

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/save_username"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="112dp"
            android:layout_marginRight="112dp"
            android:backgroundTint="@color/_primary"
            android:text="@string/continue_text"
            android:textColor="@color/white"

            />

        <TextView
            android:layout_width="221dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="100dp"
            android:text="@string/politique_de_confidentialite"
            android:textAlignment="center"
            android:textColor="@color/_primary"
            android:textSize="@dimen/_text_smale_smale" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>