<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_anchor="@+id/linearLayout"
        app:layout_anchorGravity="center">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="0dp"
            android:src="@drawable/chat"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/_text_color_secondary"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/phone_number_text"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_padding"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:maxLines="1"
                android:hint="+229    __ __       __ __       __ __"
                android:inputType="phone"
                android:background="@drawable/phone_number_edit_background"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/send_code_button"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="112dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="112dp"
            android:backgroundTint="@color/_primary"
            android:text="@string/send_code_text"
            android:textColor="@color/white"

            />

        <TextView
            android:layout_width="221dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="100dp"
            android:text="@string/politique_de_confidentialite"
            android:textAlignment="center"
            android:textColor="@color/_primary"
            android:textSize="@dimen/_text_smale_smale" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>